docs: add basic authorization in swagger
